@@ -4,6 +4,8 @@
  * glide_temp.F90: reorganised iterative solution to avoid duplicated code
  * glide_temp.F90: cleaned model dreived type from findvtri; created new
    type to hold vertical coordinate information (in glide_vertcoord.F90)
+ * glide_temp.F90: Various formating improvements
+ * glide_temp.F90: use/only list entries
  * Regtested against branchpoint for e2.a - OK.
 
 2009-09-24 Ian Rutt
